removed width attribute to prevent overflow

--- a/styles/Title.module.css
+++ b/styles/Title.module.css
@@ -1,6 +1,6 @@
 .main {
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   /*max-width: 22rem;*/
   top: 1%;
   left: 2%;
@@ -13,14 +13,16 @@
 
 @media only screen and (max-width: 480px) {
   .main {
-   max-width: 100vw;
-   top: 3%;
-   left: 5%;
+    max-width: 100vw;
+    top: 3%;
+    left: 5%;
     /*font-size: 80pt;*/
   }
+
   .main h2 {
     width: 50rem;
   }
+
   .main h6 {
     width: 50rem;
   }
